--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -4,13 +4,13 @@
 
 In the last chapter, we examined a scenario with multiple populations where the **population means were identical**. Consequently, sample means differed for one reason: random sampling error. This meant the formulas for a) total variance [observed variance] and b) random sampling variance [expected variance] were estimates of the **same** quantity.
 
-**In this chapter**, we examine a scenario with multiple populations where the **population means are different**.  Consequently, sample means will differ for two reasons. More specifically, sample means will differ due to differences among the population mean and random sampling error.  This means the formulas for a) total variance [observed variance] and b) random sampling variance [expected variance] are estimates of **different** quantities.
+**In this chapter**, we examine a scenario with multiple populations where the **population means are different**.  Consequently, sample means will differ for two reasons. More specifically, sample means will differ due to differences among the population means and random sampling error.  This means the formulas for a) total variance [observed variance] and b) random sampling variance [expected variance] are estimates of **different** quantities.
 
 ## Theory sample mean variance 
 
 ### Single population (theory)
 
-Although the focus of this chapter is multiple populations, we begin with a single population. Recall that when there is a single population we express the variance in sample means using the formula below. This formula is conceptual one that calculates the variance in sample means due to sampling error for a given population variance and sample size.
+Although the focus of this chapter is multiple populations, we begin with a single population. Recall that when there is a single population we express the variance in sample means using the formula below. This formula is a conceptual one that calculates the variance in sample means due to sampling error for a given population variance and sample size.
 
 $$
 \begin{aligned} 
@@ -23,7 +23,7 @@ $$
 
 ### Multiple populations (theory)
 
-When there are multiple populations with identical variances, but different population means, that same formula applies for sampling error. That is, because the populations of people all of have the same variance, we can use the old formula to calculate the variability in sample means due to sampling error. In ANOVA, we ASSUME the various populations have the same variance - here we KNOW the multiple populations have the same variance (becausee we are creating them in the computer later).
+When there are multiple populations with identical variances, but different population means, that same formula applies for sampling error. That is, because the populations of people all of have the same variance, we can use the old formula to calculate the variability in sample means due to sampling error. In ANOVA, we assume the various populations have equal variances (homoscedasticity). In this example, we know this assumption is true because we generate the populations ourselves with identical variances.
 
 $$
 \begin{aligned} 
@@ -217,7 +217,7 @@ The first few rows of the data set with 9,000 sample mean is below:
 head(sample_means)
 ```
 
-The trial column indicate which trial (of the 9,000) is represented in that row. The source population column indicate the population we obtain the sample from (1 since we only had 1 population). The sample mean column indicate the sample mean in that trial.
+The trial column indicates which trial (of the 9,000) is represented in that row. The source population column indicate the population from which we obtained the sample (1 since we only had 1 population). The sample mean column indicates the sample mean in that trial.
 
 ```{r}
 sample_means %>%
@@ -225,7 +225,7 @@ sample_means %>%
 ```
 
 
-We take the variance of all of those sample means and get a value of 30.80005 which closely approximately the actual value of 31.26472 (which we get when using an infinite number of sample means.) 
+We take the variance of all of those sample means and get a value of 30.80005 which closely approximates the actual value of 31.26472 (which we get when using an infinite number of sample means.) 
 
 
 **That is, when multiple populations have identical means, the variance of sample means from those populations is due entirely to sampling error. That variance of sample means is represented by the formula below:**
@@ -293,7 +293,7 @@ $$
 
 Thus, as indicated above, $\sigma_{A}^2>0$.
 
-So the total variance is sample means is a combination of the variance in the population means and random sampling error:
+So the total variance in sample means is a combination of the variance in the population means and random sampling error:
 
 $$
 \begin{aligned} 
@@ -321,13 +321,13 @@ sample_means <- get_mean_samples(pop1, pop2, pop3,
                                  number.of.trials = 9000)
 ```
 
-The first few rows of the data set with 9,000 sample mean is below:
+The first few rows of the data set with 9,000 sample mean are shown below:
 
 ```{r}
 head(sample_means)
 ```
 
-The trial column indicate which trial (of the 9,000) is represented in that row. The source population column indicate the population we obtain the sample from (1 since we only had 1 population). The sample mean column indicate the sample mean in that trial.
+The trial column indicates which trial (of the 9,000) is represented in that row. The source population column indicate the population we obtain the sample from (1 since we only had 1 population). The sample mean column indicate the sample mean in that trial.
 
 ```{r}
 sample_means %>%
@@ -335,7 +335,7 @@ sample_means %>%
 ```
 
 
-We take the variance of all of those sample means and get a value of 297.7683 which closely approximately the actual value of 297.9314 (which we get when using an infinite number of sample means.)
+We take the variance of all of those sample means and get a value of 297.7683 which closely approximates the actual value of 297.9314 (which we get when using an infinite number of sample means.)
 
 **That is, when multiple populations have different means, the variance of sample means from those populations is due to both sampling error and the variance of the population means. That variance of sample means is represented by the formula below:**
 
@@ -351,7 +351,7 @@ In the preceding simulations we saw how the variance of the distribution of samp
 
 Consider a scenario where you are interested in examining the effect of crowding on aggressive behavior. Your dependent variable is aggressive behavior. Your independent variable is Crowding with three levels: low, medium, and high. Your study has 5 people in each of these three conditions. The 5 people's aggression scores in the low crowding condition represent a sample aggression scores from a low crowding population. Likewise, the 5 people's aggression scores in the medium crowding condition represent a sample aggression scores from a medium crowding population. Finally, the 5 people people's aggression scores in the high crowding condition represent a sample aggression scores from a high crowding population. 
 
-You calculate a sample mean for each of the three conditions. You are asking if there is an effect of crowding on aggression. To answer this question we need to think of the distribution of sample means that would occur if you repeats the study thousands of times. If you repeated the study thousand of times, and crowding had now effect on aggression the distribution of sample means differ only due to sampling error and be described by the formula below. We think of this formula as describing the distribution of sample means under the Null Hypothesis (i.e., the scenario where the population means are equal.)
+You calculate a sample mean for each of the three conditions. You are asking if there is an effect of crowding on aggression. To answer this question we need to think of the distribution of sample means that would occur if you repeats the study thousands of times. If you repeated the study thousand of times, and crowding had no effect on aggression the distribution of sample means would differ only due to sampling error and would be described by the formula below. We think of this formula as describing the distribution of sample means under the Null Hypothesis (i.e., the scenario where the population means are equal.)
 
 $$
 \begin{aligned} 
@@ -361,7 +361,7 @@ $$
 $$
 
 
-In contrast, if the crowding manipulation did influence aggressive behavior, this means there are different population means for the three crowding conditions. If the population means are different, then means the variance for the distribution of sample means would correspond to:
+In contrast, if the crowding manipulation did influence aggressive behavior, this means there are different population means for the three crowding conditions. If the population means are different, then the variance for the distribution of sample means would correspond to:
 
 $$
 \begin{aligned} 
@@ -521,7 +521,7 @@ knitr::include_graphics("ch_deeper_sampling/images/ftable_desc.png")
 
 Notice on the **feedback** line of the output that the $p-value$ is very small $p<.001$. How did we obtain this value?
 
-The F-value is obtained by creating a simulation where there is no effect. We do as we did in the last chapter. First, we assume the population means were identical. Second, we assume the population variances are identical. Third, we imagine taking three samples ($a = 3$), one for each population, each $n = 5$. Fourth, we imagine creating an F-value from the data. Fifth, we imagine repeating this process a large number of times. The results is the distribution of F-values that you would obtain if there was no effect. Then we see how the F-value from our study ($F = 77.72$) fits into this distribution. 
+The F-value is obtained by creating a simulation where there is no effect. We do as we did in the last chapter. First, we assume the population means were identical. Second, we assume the population variances are identical. Third, we imagine taking three samples ($a = 3$), one for each population, each $n = 5$. Fourth, we imagine creating an F-value from the data. Fifth, we imagine repeating this process a large number of times. The result is the distribution of F-values that you would obtain if there was no effect. Then we see how the F-value from our study ($F = 77.72$) fits into this distribution. 
 
 In the previous chapter, we created this exact distribution. See it presented again below. Notice the F-value from our study ($F = 77.72$) can't fit on this axis range.
 
@@ -556,9 +556,9 @@ ggplot(data = data_ratios3, mapping = aes(x = var_ratio)) +
   theme_classic()
 ```
 
-Because the red line is so extreme, our $p-value$ is very low $p<.0001$. **This is the probability of our data (or more extreme data), assuming the population means are all the same.**
+Because the red line is so extreme, the $p-value$ is very small $p<.0001$. **This is the probability of our data (or more extreme data), assuming the population means are all the same.**
 
-Consequently, we say the ANOVA is significant. We began by assuming the population means were all the same. Under this assumption, our study result is incredibly unlikely. Consequently, we reject the assumption, that the population means are all the same, and conclude the population means may be different.
+Consequently, we say that the ANOVA is significant. We began by assuming the population means were all the same. Under this assumption, our study result is incredibly unlikely. Consequently, we reject the null hypothesis that the population means are equal and conclude that at least one population mean differs from the others.
 
 ## Take a moment
 
@@ -568,6 +568,6 @@ Take a moment and think about all of the math and logic we've used to come to th
 
 |          Attribute           |                                  Parameter Calculation                                   |                               Estimate of Parameter                               | Reflects         |
 |:----------------------------:|:----------------------------------------------------------------------------------------:|:---------------------------------------------------------------------------------:|:----------------:|
-|      Method 1: Observed Variance      |  $\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    | Sampling Error & Variance of Population Means |
+|      Method 1: Observed Variance      |  $\sigma_{\bar{x}}^2 = \lim_{K \to \infty} \frac{\sum_{i=1}^{K} (\bar{x}_i - \mu_{\bar{x}})^2}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    | Sampling Error & Variance of Population Means |
 |    Method 2: Expected Variance    |                    $\sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{n}$                    |                     $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}$                      | Just Sampling Error |
 
