--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -8,16 +8,16 @@ output:
 
 ## Equal population means
 
-In this chapter we build from a one population scenario to a three population scenario where the three populations have the same mean.
+In this chapter, we build from a one-population scenario to a three-population scenario, where the three populations have identical population means (under the null hypothesis of no differences).
 
 ## A tale of two formulas
 
-In this chapter, we focus on describing the distribution of sample means. Our goal is to understand the logic behind two different formulas for estimating the variance of the *sampling distribution of the sample mean* (often denoted $\sigma_{\bar{x}}^2$), which quantifies how much sample means vary from sample to sample. A thorough understanding of both of these two estimation approaches lays the foundation for understanding Analysis of Variance (ANOVA).
+In this chapter, we focus on describing the distribution of sample means. Our goal is to understand the logic behind two different formulas for estimating the variance of the *sampling distribution of the sample mean* (often denoted $\sigma_{\bar{x}}^2$), which quantifies how much sample means vary from sample to sample. A thorough understanding of both estimation approaches is critical because ANOVA compares these two estimates of variance—the observed variance among sample means and the expected variance due to random sampling error—to compute the F-statistic.
 
 | Approach  | Estimation Formula | Goal  |
 :----------:|:----:|:--------|
-| Approach 1: Estimated Observed Variance |  $s_{\bar{x}}^2=\frac{\sum (\bar{x}-\bar{\bar{x}})^2}{a-1}$ | Estimate the variance of the sampling distribution. That is, estimate variance of sample mean due to all sources (population differences, random sampling error, etc.).
-| Approach 2: Estimated Expected Variance |   $s_{\bar{x}}^2=\frac{s_{people}^2}{n}$  | Estimate the variance in sample mean due ONLY to random sampling error.|
+| Approach 1: Estimated Observed Variance |  $s_{\bar{x}}^2=\frac{\sum (\bar{x}-\bar{\bar{x}})^2}{a-1}$ where $\bar{x}$ is the sample mean for each group, $\bar{\bar{x}}$ is the grand mean across all groups, and $a$ is the number of groups.|  Estimate the variance of the sampling distribution of sample means across groups. This estimate includes variance due to both population mean differences and random sampling error. |
+| Approach 2: Estimated Expected Variance |   $s_{\bar{x}}^2=\frac{s_{people}^2}{n}$  | Estimate the variance of the sampling distribution of sample means under the null hypothesis, attributable solely to random sampling error (i.e., assuming no true differences among population means).|
 
 
 Understanding the logic behind both approaches for estimating the variance of the distribution of sample means is critical. **In this chapter, where there is one population of people**, the two approaches estimate the same thing - variability in sample means **due to random sampling**. However, in future chapters, where there are multiple populations of people with different means, the two approaches estimate different things. Consequently, to prepare you for those more complex future chapters, it's important to understand the logic behind both approaches in the simple case - where there is a single population of people.
@@ -105,7 +105,7 @@ In this first method, we use an infinite number of sample means and simply calcu
 
 ```{=tex}
 \begin{equation} 
-\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}
+\sigma_{\bar{x}}^2 = \lim_{K \to \infty}\frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}
       (\#eq:popvarxbardeep)
 \end{equation}
 ```
@@ -115,7 +115,7 @@ Notice how Equation \@ref(eq:popvarxbardeep) for the variance of sample means in
 | Distribution |          Attribute           |                                  Parameter Calculation                                   |                               Estimate of Parameter                               |
 |:------------:|:----------------------------:|:----------------------------------------------------------------------------------------:|:---------------------------------------------------------------------------------:|
 |    People    |           Variance           |          $\sigma_{people}^2 = \frac{\sum_{i=1}^{N}{(X_i - \mu_{people})^2}}{N}$          |   $s_{people}^2 = VAR = \frac{\sum_{i=1}^{n}{(x_i - \bar{x}_{people})^2}}{n-1}$   |
-| Sample Means |      Approach 1: Observed Variance      |  $\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    |
+| Sample Means |      Approach 1: Observed Variance      |  $\sigma_{\bar{x}}^2 = \lim_{K \to \infty} \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    |
 
 
 
@@ -671,7 +671,7 @@ Much of what we have learned is summarized in the table below.
 |    People    |           Variance           |          $\sigma_{people}^2 = \frac{\sum_{i=1}^{N}{(X_i - \mu_{people})^2}}{N}$          |   $s_{people}^2 = VAR = \frac{\sum_{i=1}^{n}{(x_i - \bar{x}_{people})^2}}{n-1}$   |
 |    People    |      Standard Deviation      |       $\sigma_{people} = \sqrt{\frac{\sum_{i=1}^{N}{(X_i - \mu_{people})^2}}{N}}$        | $s_{people} = SD = \sqrt{\frac{\sum_{i=1}^{n}{(x_i - \bar{x}_{people})^2}}{n-1}}$ |
 | Sample Means |             Mean             |               $\mu_{\bar{x}} = E[\bar{X}] = \lim_{K \to \infty} \frac{\sum_{i=1}^{K}{\bar{x}_i}}{K}$               |               $\bar{\bar{x}} = \frac{\sum_{i=1}^{a}{\bar{x}_i}}{a}$               |
-| Sample Means |      Approach 1 Observed Variance: TotalVariance      |  $\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    |
+| Sample Means |      Approach 1 Observed Variance: TotalVariance      |  $\sigma_{\bar{x}}^2 = \lim_{K \to \infty} \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    |
 | Sample Means |    Approach 2 Expected Variance: Random sampling variance    |                    $\sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{n}$                    |                     $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}$                      |
 | Sample Means | Approach 2 Standard Error: Random sampling standard deviation | $\sigma_{\bar{x}} = \sqrt{\frac{\sigma_{people}^2}{n}}=\frac{\sigma_{people}}{\sqrt{n}}$ |   $s_{\bar{x}} = SE=\sqrt{\frac{s_{people}^2}{n}}=\frac{s_{people}}{\sqrt{n}}$    |
 
