--- a/03-graphing.Rmd
+++ b/03-graphing.Rmd
@@ -577,7 +577,7 @@ knitr::include_graphics("ch_graphing/images/custom_order.png")
 
 ### Legend order
 
-After inspecting the graph on the previous page, you might think that Marvel should be above DC in the legend. You can do that by reordering the studio factor:
+If Marvel is not above DC in the legend (sometimes it may not be depending on the ggplot version), you can ensure that it is by reordering the studio factor:
 
 ```{r}
 movie_data <- movie_data %>% 
